--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <script type="text/javascript" href = "https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
 
         <!-- Own JS -->
-        <script type="text/javascript" src="cluster.js"></script>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="js/cluster.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
